--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=TELETRACK
 spring.datasource.platform=mysql
 
 spring.batch.initialize-schema=always
-spring.batch.job.names=deliverPackageJob
+spring.batch.job.names=chunkBasedJob
